--- a/.github/workflows/install_apexpy.yml
+++ b/.github/workflows/install_apexpy.yml
@@ -29,7 +29,7 @@ jobs:
       if: runner.os == 'Windows'
       run: |
         python -m pip install numpy
-        python -m pip install --no-use-pep517 --global-option build_ext --global-option --compiler=mingw32 --global-option --fcompiler=gfortran apexpy
+        python -m pip install apexpy
 
     - name: Test apexpy
       run: python -c "import apexpy"
