--- a/.github/workflows/deploy-panel-pages.yml
+++ b/.github/workflows/deploy-panel-pages.yml
@@ -1,18 +1,20 @@
 on:
   workflow_dispatch:
 
-steps:
-- uses: actions/checkout@v3
-- uses: actions/setup-python@v4
-  with:
-    python-version: '3.10'
-    cache: 'pip'
-- run: pip install panel
-- run: g
-- run: |
-    git clone https://github.com/smithara/swarm-handbook-experiment.git
-    panel convert swarm-handbook-experiment/json/json_creator.ipynb --to pyodide-worker --out pyodide --requirements pandas markdown tabulate
-- uses: peaceiris/actions-gh-pages@v3
-  with:
-    github_token: ${{ secrets.GITHUB_TOKEN }}
-    publish_dir: pyodide
+jobs:
+  deploy-panel-pages:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - uses: actions/setup-python@v4
+        with:
+          python-version: '3.10'
+          cache: 'pip'
+      - run: pip install panel
+      - run: |
+          git clone https://github.com/smithara/swarm-handbook-experiment.git
+          panel convert swarm-handbook-experiment/json/json_creator.ipynb --to pyodide-worker --out pyodide --requirements pandas markdown tabulate
+      - uses: peaceiris/actions-gh-pages@v3
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: pyodide
