--- a/.github/workflows/deploy-panel-pages.yml
+++ b/.github/workflows/deploy-panel-pages.yml
@@ -9,10 +9,9 @@ jobs:
       - uses: actions/setup-python@v4
         with:
           python-version: '3.10'
-      - run: pip install panel
-      - run: |
-          git clone https://github.com/smithara/swarm-handbook-experiment.git
-          panel convert swarm-handbook-experiment/json/json_creator.ipynb --to pyodide-worker --out pyodide --requirements pandas markdown tabulate
+      - run: pip install panel jupyter
+      - run: git clone https://github.com/smithara/swarm-handbook-experiment.git
+      - run: panel convert swarm-handbook-experiment/json/json_creator.ipynb --to pyodide-worker --out pyodide --requirements pandas markdown tabulate
       - uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
