--- a/.github/workflows/deploy-panel-pages.yml
+++ b/.github/workflows/deploy-panel-pages.yml
@@ -9,7 +9,7 @@ jobs:
       - uses: actions/setup-python@v4
         with:
           python-version: '3.10'
-      - run: pip install panel jupyter
+      - run: pip install panel jupyter pandas markdown tabulate
       - run: git clone https://github.com/smithara/swarm-handbook-experiment.git
       - run: panel convert swarm-handbook-experiment/json/json_creator.ipynb --to pyodide-worker --out pyodide --requirements pandas markdown tabulate
       - uses: peaceiris/actions-gh-pages@v3
