--- a/.github/workflows/deploy-panel-pages.yml
+++ b/.github/workflows/deploy-panel-pages.yml
@@ -9,10 +9,11 @@ jobs:
       - uses: actions/setup-python@v4
         with:
           python-version: '3.10'
-      - run: pip install panel jupyter pandas markdown tabulate
-      - run: git clone https://github.com/smithara/swarm-handbook-experiment.git
       - run: mkdir html
-      - run: panel convert swarm-handbook-experiment/json/json_creator.ipynb --to pyodide-worker --out html/pyodide --index --requirements pandas markdown tabulate
+      - run: pip install ipython nbconvert panel pandas markdown tabulate
+      - run: git clone https://github.com/smithara/swarm-handbook-experiment.git
+      - run: cd swarm-handbook-experiment/json; ipython nbconvert --to script json_creator.ipynb; cd ../..
+      - run: panel convert swarm-handbook-experiment/json/json_creator.py --to pyodide-worker --out html/pyodide --index --requirements pandas markdown tabulate
       - uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
