--- a/.github/workflows/deploy-panel-pages.yml
+++ b/.github/workflows/deploy-panel-pages.yml
@@ -10,9 +10,9 @@ jobs:
         with:
           python-version: '3.10'
       - run: mkdir html
-      - run: pip install ipython nbconvert panel pandas markdown tabulate
+      - run: pip install jupyter nbconvert panel pandas markdown tabulate
       - run: git clone https://github.com/smithara/swarm-handbook-experiment.git
-      - run: cd swarm-handbook-experiment/json; ipython nbconvert --to script json_creator.ipynb; cd ../..
+      - run: juypyter nbconvert --to script swarm-handbook-experiment/json/json_creator.ipynb
       - run: panel convert swarm-handbook-experiment/json/json_creator.py --to pyodide-worker --out html/pyodide --index --requirements pandas markdown tabulate
       - uses: peaceiris/actions-gh-pages@v3
         with:
