--- a/.github/workflows/install_apexpy.yml
+++ b/.github/workflows/install_apexpy.yml
@@ -10,7 +10,7 @@ jobs:
       fail-fast: false
       matrix:
         runs-on: [windows-latest]
-        python-version: ["3.8"]
+        python-version: ["3.10"]
 
     steps:
 
@@ -21,7 +21,7 @@ jobs:
         install: >-
           base-devel
 
-    - uses: actions/setup-python@v2
+    - uses: actions/setup-python@v4
       with:
         python-version: ${{ matrix.python-version }}
 
@@ -29,7 +29,7 @@ jobs:
       if: runner.os == 'Windows'
       run: |
         python -m pip install numpy
-        python -m pip install git+https://github.com/aburrell/apexpy.git@reorg_w_meson
+        python -m pip install git+https://github.com/aburrell/apexpy.git@rc_v2.0.1
 
     - name: Test apexpy
       run: python -c "import apexpy"
