--- a/.github/workflows/install_apexpy.yml
+++ b/.github/workflows/install_apexpy.yml
@@ -14,16 +14,14 @@ jobs:
 
     steps:
 
-    - name: Setup gfortran (Windows)
-      uses: msys2/setup-msys2@v2
-      if: runner.os == 'Windows'
-      with:
-        install: >-
-          base-devel
-
     - uses: actions/setup-python@v4
       with:
         python-version: ${{ matrix.python-version }}
+
+    - name: Setup gfortran (Windows)
+      if: runner.os == 'Windows'
+      run: |
+           choco install mingw
 
     - name: Install apexpy (Windows)
       if: runner.os == 'Windows'
