--- a/.github/workflows/install_apexpy.yml
+++ b/.github/workflows/install_apexpy.yml
@@ -18,18 +18,29 @@ jobs:
       with:
         python-version: ${{ matrix.python-version }}
 
+#     - name: Setup gfortran (Windows)
+#       uses: msys2/setup-msys2@v2
+#       if: runner.os == 'Windows'
+#       with:
+#         install: >-
+#           base-devel
+
+#     - name: Install apexpy (Windows)
+#       if: runner.os == 'Windows'
+#       shell: msys2 {0}
+#       run: |
+#         python -m pip install numpy
+#         python -m pip install git+https://github.com/aburrell/apexpy.git@rc_v2.0.1
+
     - name: Setup gfortran (Windows)
-      uses: msys2/setup-msys2@v2
       if: runner.os == 'Windows'
-      with:
-        install: >-
-          base-devel
+      run: |
+           choco install ninja mingw
 
     - name: Install apexpy (Windows)
       if: runner.os == 'Windows'
-      shell: msys2 {0}
       run: |
-        python -m pip install numpy
+        python -m pip install meson-python
         python -m pip install git+https://github.com/aburrell/apexpy.git@rc_v2.0.1
 
     - name: Test apexpy
