--- a/.github/workflows/install_apexpy.yml
+++ b/.github/workflows/install_apexpy.yml
@@ -35,7 +35,7 @@ jobs:
     - name: Setup gfortran (Windows)
       if: runner.os == 'Windows'
       run: |
-           choco install ninja mingw
+           choco install mingw
            choco install rtools --no-progress
            echo "c:\rtools40\ucrt64\bin;" >> $env:GITHUB_PATH
 
