--- a/.github/workflows/conda_apexpy.yml
+++ b/.github/workflows/conda_apexpy.yml
@@ -12,22 +12,33 @@ jobs:
       matrix:
         os: ["ubuntu-latest", "macos-latest", "windows-latest"]
         python-version: ["3.10"]
+    defaults:
+      run:
+        shell: bash -el {0}
     steps:
       - uses: conda-incubator/setup-miniconda@v2
         with:
           mamba-version: "*"
           channels: conda-forge
           python-version: ${{ matrix.python-version }}
-      - name: Mamba info
-        shell: bash -el {0}
-        run: mamba info
-      - name: Update environment
-        shell: bash -el {0}
-        run: mamba install fortran-compiler meson
+      - name: Add build dependencies (Linux)
+        if: runner.os == 'Linux'
+        run: mamba install fortran-compiler
+      - name: Add build dependencies (macOS)
+        if: runner.os == 'macOS'
+        run: mamba install fortran-compiler
+      - name: Add build dependencies (Windows)
+        if: runner.os == 'Windows'
+        # Just trying everything that might help...
+        # https://github.com/conda-forge/compilers-feedstock
+        # https://github.com/conda-forge/vc-feedstock
+        run: |
+          mamba install fortran-compiler cxx-compiler c-compiler vc vs2015_runtime vs2017_win-64 vs2019_win-64 vs2022_win-64
+      - name: Mamba info & list
+        run: |
+          mamba info
+          mamba list
       - name: Install apexpy
-        shell: bash -el {0}
         run: pip install git+https://github.com/aburrell/apexpy.git@rc_v2.0.1
       - name: Test apexpy
-        shell: bash -el {0}
         run: python -c "import apexpy"
-  
