--- a/.github/workflows/test_lompe_envs.yml
+++ b/.github/workflows/test_lompe_envs.yml
@@ -5,7 +5,7 @@ on:
 
 jobs:
   install-lompe-conda:
-    name: Using (${{ matrix.python-version }}, ${{ matrix.os }})
+    name: Test conda environment using (${{ matrix.python-version }}, ${{ matrix.os }})
     runs-on: ${{ matrix.os }}
     strategy:
       fail-fast: false
@@ -31,7 +31,27 @@ jobs:
           mamba list
       - name: Install lompe
         run: |
-          git submodule update --init
-          pip install -e .[extras]
+          git -C lompe submodule update --init
+          pip install -e lompe[extras]
+      - name: Test lompe
+        run: python -c "import lompe"
+  plain-pip:
+    name: Test pip package using (${{ matrix.python-version }}, ${{ matrix.os }})
+    runs-on: ${{ matrix.os }}
+    strategy:
+      fail-fast: false
+      matrix:
+        os: ["ubuntu-latest"]
+        python-version: ["3.8", "3.11"]
+    steps:
+      - uses: actions/setup-python@v2
+        with:
+          python-version: ${{ matrix.python-version }}
+      - name: Clone repo
+        run: git clone https://github.com/smithara/lompe
+      - name: Install lompe
+        run: |
+          git -C lompe submodule update --init
+          pip install -e lompe[extras]
       - name: Test lompe
         run: python -c "import lompe"
