--- a/.github/workflows/pre-commit.yml
+++ b/.github/workflows/pre-commit.yml
@@ -6,7 +6,11 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
-    - uses: actions/setup-python@v4
     - uses: pre-commit/action@v3.0.0
       with:
         extra_args: --hook-stage manual --all-files
+
+  pre-commit-pipx:
+    runs-on: ubuntu-latest
+    steps:
+     - run: pipx run pre-commit run --all
