--- a/.github/workflows/pre-commit.yml
+++ b/.github/workflows/pre-commit.yml
@@ -13,4 +13,5 @@ jobs:
   pre-commit-pipx:
     runs-on: ubuntu-latest
     steps:
+     - uses: actions/checkout@v3
      - run: pipx run pre-commit run --all
