--- a/.github/workflows/install_apexpy.yml
+++ b/.github/workflows/install_apexpy.yml
@@ -9,7 +9,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        runs-on: [windows-latest]
+        runs-on: [windows-2022]
         python-version: ["3.10"]
 
     steps:
@@ -18,30 +18,10 @@ jobs:
       with:
         python-version: ${{ matrix.python-version }}
 
-#     - name: Setup gfortran (Windows)
-#       uses: msys2/setup-msys2@v2
-#       if: runner.os == 'Windows'
-#       with:
-#         install: >-
-#           base-devel
-
-#     - name: Install apexpy (Windows)
-#       if: runner.os == 'Windows'
-#       shell: msys2 {0}
-#       run: |
-#         python -m pip install numpy
-#         python -m pip install git+https://github.com/aburrell/apexpy.git@rc_v2.0.1
-
-    - name: Setup gfortran (Windows)
-      if: runner.os == 'Windows'
-      run: |
-           choco install ninja mingw
-           choco install rtools --no-progress
-           echo "c:\rtools40\ucrt64\bin;" >> $env:GITHUB_PATH
-
     - name: Install apexpy (Windows)
       if: runner.os == 'Windows'
       run: |
+        echo "C:\ProgramData\chocolatey\lib\mingw\tools\install\mingw64\bin" >> $GITHUB_PATH
         python -m pip install git+https://github.com/aburrell/apexpy.git
 
     - name: Test apexpy
