--- a/.github/workflows/install_apexpy.yml
+++ b/.github/workflows/install_apexpy.yml
@@ -22,7 +22,7 @@ jobs:
       if: runner.os == 'Windows'
       run: |
         echo "C:\ProgramData\chocolatey\lib\mingw\tools\install\mingw64\bin" >> $GITHUB_PATH
-        python -m pip install git+https://github.com/aburrell/apexpy.git
+        python -m pip install git+https://github.com/aburrell/apexpy.git@v2.0.1
 
     - name: Test apexpy
       run: python -c "import apexpy"
