--- a/.github/workflows/install_apexpy.yml
+++ b/.github/workflows/install_apexpy.yml
@@ -1,4 +1,4 @@
-name: Install apexpy on Windows
+name: Install apexpy
 
 on:
   workflow_dispatch:
@@ -9,8 +9,8 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        runs-on: [windows-2022]
-        python-version: ["3.10"]
+        runs-on: [ windows-2022, ubuntu-24.04 ]
+        python-version: ["3.10", "3.11", "3.12", "3.13"]
 
     steps:
 
@@ -23,6 +23,10 @@ jobs:
       run: |
         echo "C:\ProgramData\chocolatey\lib\mingw\tools\install\mingw64\bin" >> $GITHUB_PATH
         python -m pip install git+https://github.com/aburrell/apexpy.git@v2.1.0
+    
+    - name: Install apexpy (Linux)
+      if: runner.os == 'Linux'
+      run: python -m pip install git+https://github.com/aburrell/apexpy.git@v2.1.0
 
     - name: Test apexpy
       run: python -c "import apexpy"
