--- a/.github/workflows/install_apexpy.yml
+++ b/.github/workflows/install_apexpy.yml
@@ -28,5 +28,11 @@ jobs:
       if: runner.os == 'Linux'
       run: python -m pip install git+https://github.com/aburrell/apexpy.git@v2.1.0
 
-    - name: Test apexpy
+    - name: Test apexpy import
       run: python -c "import apexpy"
+    
+    - name: Run apexpy tests
+      run: |
+        git clone https://github.com/aburrell/apexpy.git@v2.1.0
+        python -m pip install pytest
+        pytest apexpy/
