--- a/.github/workflows/install_apexpy.yml
+++ b/.github/workflows/install_apexpy.yml
@@ -10,7 +10,7 @@ jobs:
       fail-fast: false
       matrix:
         runs-on: [ windows-2022, ubuntu-24.04 ]
-        python-version: ["3.10", "3.11", "3.12", "3.13"]
+        python-version: ["3.8", "3.9", "3.10", "3.11", "3.12", "3.13"]
 
     steps:
 
